02_Home correct text-align in Contact component

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,10 @@
   height: 120px !important;
 }
 
+.Contact__list {
+  text-align: center;
+}
+
 .Footer {
   text-align: center;
 }
